--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+
+    /* GPT의 추천 추가 */
+    "strictNullChecks": true
   },
   "include": [
     ".eslintrc.cjs",
