버셀 pnpm 버전 체크 해제

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "build": {
     "env": {
-      "PNPM_VERSION": "9.1.1"
+      "PNPM_VERSION": "9.1.1",
+      "COREPACK_ENABLE_STRICT": "0"
     }
   }
 }
