--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preinstall": "corepack enable && corepack prepare pnpm@9.1.1 --activate"
   },
   "dependencies": {
+    "@clerk/nextjs": "5.0.0-beta.46",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
