--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
     "preinstall": "corepack enable && corepack prepare pnpm@9.1.1 --activate"
   },
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.46",
+    "@sentry/nextjs": "^8.7.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^6.6.0",
     "@vercel/postgres": "^0.8.0",
